--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
-<h1>MisterComputerMan</h1>
+<!DOCTYPE html>
+<html lang="en" moznomarginboxes>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1" />
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+        <meta name="google" content="notranslate" />
+        <!-- Metadata (autofilled by "Save to HTML") -->
+        <meta name="author" content="Joe Smith" />
+        <meta name="subject" content="A really good software engineer you should hire" />
+        <meta name="keywords" content="coding, developing, hacking" />
+        <meta name="date" content="2009-04-01" />
+        <!-- Google Fonts, Normalize, and Font Awesome -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" integrity="sha256-oSrCnRYXvHG31SBifqP2PM1uje7SJUyX0nTwO2RJV54=" crossorigin="anonymous" />
+        <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous" />
+        <!-- Custom Styles -->
+        <link rel="stylesheet" type="text/css" href="./paper.css" />
+        <link rel="stylesheet" type="text/css" href="./styles.css" />
+        <link rel="stylesheet" type="text/css" href="./typography.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="./screen.css" />
+        <link rel="stylesheet" type="text/css" media="print" href="./print.css" />
+        <title>MisterComputerMan</title>
+    </head>
+    <body class="letter">
+        <section id="save">
+            <section class="sheet">
+                <aside>
+                  <section class="contact"></section>
+                    <section class="contact">
+                        <h6>Need help?</h6>
+                        <ul>
+                            <li>
+                                <p><i class="fa fa-map-marker-alt" title="Location"></i>Greenville, Texas</p>
+                            </li>
+                            <li>
+                                <p><i class="fa fa-phone" title="Cell phone"></i> <a href="tel:9034508903">903.450.8903</a></p>
+                            </li>
+                            <li>
+                                <p><i class="fa fa-envelope" title="Email"></i> <a href="mailto:mistercomputerman@hotmail.com">Email Me</a></p>
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="skills">
+                        <h6>Tech Support</h6>
+                        <ul>
+                            <li><span>Windows 11</span></li>
+                            <li><span>Windows 10</span></li>
+                            <li><span>Windows Server</span></li>
+                            <li><span>Routers</span></li>
+                        </ul>
+                    </section>
+                    <section class="references">
+                        <h6>References</h6>
+                        <address>
+                            some text
+                        </address>
+                    </section>
+                </aside>
+                <section>
+                    <header class="name" aria-label="Joe Smith">
+                      <img style="float: left;padding-right: .5rem;" src="./flowerLogo.png"><h1 class="site-title">MisterComputerMan</h1>
+                      <p><i>Serving hunt county, Texas for over 12 years.</i></p>
+                      <hr />
+                    </header>
+                    <section>
+                      <h3>On-Site Computer and Networking Services</h3>
+                      <ul>
+                        <li>Windows Support</li>
+                        <li>Computer Repair</li>
+                        <li>Installation & Setup</li>
+                        <li>Servers</li>
+                        <li>Networking</li>
+                        <li>Backups</li>
+                      </ul>
+                      <h3>Service Details</h3>
+                      <ul>
+                      <li>Serving a 50-mile radius of Greenville, Texas</li>
+                        <li>On-Site Service and Diagnostics: $65.00 (includes first 1/2 hour labor)</li>
+                      <li>$65.00 for each additional hour (30 min. Increments).</li>
+                      <li>Networked Computers with a Server: $85.00 an hour.</li>
+                      <li>Flat Rate available for some extended services.</li>
+                      <li>I setup, configure, and maintain all wired and wireless networks, routers, switches.</li>
+                      <li>I setup, configure, and maintain all Window&rsquo;s desktops, laptops and servers.</li>
+                      <li>Consult/Build/Delivery/Setup $250.00 plus Service Call.</li>
+                      </ul>
+                    </section>
+                    <section>
+                      <h3>About Me</h3>
+                      <p>Experienced service professional with grade-A attitude, and the tools and skills to get your desktop/server/network back online.</p>
+                      <p>My service mission is to provide quality, dependable on-site technical services to residential, small business, and church clients. Guaranteed customer satisfaction at the lowest price.</p>
+                      <p>I am energetic, mature, and have a professional appearance. I can effectively communicate with teens, mothers, fathers, grandparents, small business owners or technical engineers. I am up-to-date and continue to train and certify on new technology. I have a verifiable work history. References are available upon request.</p>
+                      <p>I will never talk over you or try to confuse you. I will only sell you what you need, at a price you can afford. I will always provide reliable, confidential service you can trust, in plain English.</p>
+                    </section>
+                </section>
+            </section>
+        </section>
+    </body>
+</html>
