--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </aside>
                 <section>
                     <header class="name" aria-label="Joe Smith">
-                      <img style="float: left;padding-right: .5rem;" src="./flowerLogo.png"><h1 class="site-title">MisterComputerMan</h1>
+                      <img style="float: left;padding-right: .5rem;" src="./img/flowerLogo.png"><h1 class="site-title">MisterComputerMan</h1>
                       <p><i>Serving hunt county, Texas for over 12 years.</i></p>
                       <hr />
                     </header>
