added site tags and content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-<img src="./img/windows_flyer3.jpeg">
+<!DOCTYPE html>
+<html lang="en" moznomarginboxes>
+  <head>
+    <title>MisterComputerMan</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <meta name="google" content="notranslate" />
+    <!-- Metadata (autofilled by "Save to HTML") -->
+    <meta name="author" content="MisterComputerMan" />
+    <meta name="subject" content="MisterComputerMan" />
+    <meta name="description" content="MisterComputerMan serving greenville hunt county Texas">
+    <meta name="keywords" content="MisterComputerMan, Greenville, Texas, Greenville TX, computer, repair, computer repair, hunt county, experienced service professional, Sales and Service, support, windows" />
+    <meta name="date" content="2022-03-04" />
+    <meta property=”og:locale” content=”en_US”>
+    <meta property=”og:type” content=”website”>
+    <meta property=”og:title” content=”mistercomputerman”>
+    <meta property=”og:description” content=”MisterComputerMan serving greenville hunt county Texas”>
+    <meta property=”og:url” content=”https://www.mistercomputerman.com/”>
+    <meta property=”og:site_name” content=mistercomputerman>
+    <meta name=”robots” content=”index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1″>
+  </head>
+  <body>
+    <section style="display: flex; justify-content: center;">
+      <img alt="mistercomputerman" src="./img/windows_flyer3.jpeg">
+    </section>
+    <section style="height: 0;">
+      <h1 style="visibility: hidden;">MisterComputerMan</h1>
+      <h2 style="visibility: hidden;">Sales & Service</h2>
+      <ul style="visibility: hidden;">
+        <li>
+            <p><i class="fa fa-map-marker-alt" title="Location"></i>Greenville, Texas</p>
+        </li>
+        <li>
+            <p><i class="fa fa-phone" title="Cell phone"></i> <a href="tel:9034508903">903.450.8903</a></p>
+        </li>
+        <li>
+            <p><i class="fa fa-envelope" title="Email"></i> <a href="mailto:mistercomputerman@hotmail.com">Email Me</a></p>
+        </li>
+      </ul>
+    </section>
+  </body>
+</html>
